code committed for bug fixes.
